# AirSim

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .gitmodules  .travis.yml  404.html  AirSim.props  AirSim.sln  AirSim.sln.vlconfig  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.html  CONTRIBUTING.md  Custom Vehicle into AirSim  Custom Vehicle.md  Custom Vehicles AirSim.docx  Firmware.hpp  ISSUE_TEMPLATE.md  InfraredCamera.html  LICENSE  PidController.hpp  README.md  SECURITY.md  SUPPORT.html  SUPPORT.md  Techasit.info&BlackBerry.Inc  Unity.html  UnrealPluginFiles.vcxproj  UnrealPluginFiles.vcxproj.filters  __runBuild.sh  adding_new_apis.html  airsim_ros_pkgs.html  airsim_tutorial_pkgs.html  apis.html  apis_cpp.html  azure.html  build.cmd  build.ps1  (+79 more)
AirLib/: AirLib.sln  AirLib.vcxproj  AirLib.vcxproj.filters  CMakeLists.txt  update_mavlibkcom.bat
AirLib/include/: VI_Racer_front_tire.tir  test.tir
AirLib/include/api/: ApiProvider.hpp  ApiServerBase.hpp  ControlServerBase.hpp  DebugApiServer.hpp  RpcLibAdapators.hpp  RpcLibAdapatorsBase.hpp  RpcLibAdaptorsBase.hpp  RpcLibAutomobileServer.hpp  RpcLibBaseServer.hpp  RpcLibClient.hpp  RpcLibClientBase.hpp  RpcLibDroneClient.hpp  RpcLibDroneServer.hpp  RpcLibPort.hpp  RpcLibServerBase.hpp  SimModeApiBase.hpp  VehicleApiBase.hpp  VehicleConnectorBase.hpp  VehicleSimApiBase.hpp  WorldSimApiBase.hpp
AirLib/include/automobile/: Automobile.hpp  AutomobileBrake.hpp  AutomobileBrakeParameters.hpp  AutomobileControllerBase.hpp  AutomobileEngine.hpp  AutomobileEngineParameters.hpp  AutomobileHardCodedBrake.hpp  AutomobileHardCodedEngine.hpp  AutomobileSedan.hpp  AutomobileState.hpp  AutomobileStaticParams.hpp  BrushWheel.hpp  BrushWheelParameters.hpp  MagicFormulaWheel.hpp  PneumaticWheel.hpp  TirFileWheelParameters.hpp  WheelParameters.hpp  test.brush
AirLib/include/common/: AirSimSettings.hpp  CancelToken.hpp  ClockBase.hpp  ClockFactory.hpp  Common.hpp  CommonStructs.hpp  DebugClock.hpp  DelayLine.hpp  EarthCelestial.hpp  EarthUtils.hpp  EkfStructs.hpp  FirstOrderFilter.hpp  FrequencyLimiter.hpp  GaussianMarkov.hpp  GeodeticConverter.hpp  HelperFunctions.hpp  ImageCaptureBase.hpp  LogFileWriter.hpp  PidController.hpp  ScalableClock.hpp  Settings.hpp  SimClock.hpp  StateReporter.hpp  StateReporterWrapper.hpp  SteppableClock.hpp  UpdatableContainer.hpp  UpdatableObject.hpp  VectorMath.hpp  Waiter.hpp  WorkerThread.hpp
AirLib/include/control/: ControlServerBase.hpp  CubeGeoFence.hpp  DroneControlBase.hpp  DroneControlCommon.hpp  DroneControlServer.hpp  IGeoFence.hpp  MavLinkHelper.h  (+10 more)
AirLibUnitTests/: AirLibUnitTests.cpp  AirLibUnitTests.vcxproj  AirLibUnitTests.vcxproj.filters  AutomobilePhysicsUnitTests.hpp  CMakeLists.txt  CelestialTests.hpp  JacobianTest.hpp  PixhawkTest.hpp  QuaternionTest.hpp  ReadMe.txt  RosFlightTest.hpp  SensorTest.hpp  SettingsTest.hpp  SimpleFlightTest.hpp  TestBase.hpp  TestVehicles.hpp  VehicleTest.hpp  WorkerThreadTest.hpp  cleanup.sh  compile.sh  left.txt  main.cpp  plot.py  settings_json_parser.hpp  stdafx.cpp  style.mplstyle
DroneServer/: CMakeLists.txt  DroneServer.vcxproj  DroneServer.vcxproj.filters  log  main.cpp
DroneShell/: CMakeLists.txt  DroneShell.vcxproj  DroneShell.vcxproj.filters
DroneShell/include/: SimpleShell.hpp  linenoise.hpp
DroneShell/src/: main.cpp
GazeboDrone/: CMakeLists.txt  README.md
GazeboDrone/include/: gazebo_airsim_plugin.h
GazeboDrone/src/: gazebo_airsim_plugin.cpp  main.cpp
HelloCar/: CMakeLists.txt  HelloCar.vcxproj  main.cpp
HelloDrone/: CMakeLists.txt  HelloDrone.vcxproj  main.cpp
MavLinkCom/: CMakeLists.txt  MavLinkCom.sln  MavLinkCom.vcxproj  MavLinkCom.vcxproj.filters  README.md  runsdvui.cmd
MavLinkCom/Design/: Design.dgml  FtpDesign.dgml  OffboardControl.dgml
MavLinkCom/MavLinkComGenerator/: MavLinkComGenerator.csproj  MavLinkComGenerator.sln  MavLinkGenerator.cs  MavLinkMessage.cs  MavlinkParser.cs  Program.cs  regen.cmd
MavLinkCom/MavLinkMoCap/: CMakeLists.txt  MavLinkMoCap.sln  MavLinkMoCap.vcxproj  MavLinkMoCap.vcxproj.filters  MavlinkMoCap.cpp  ReadMe.txt  Readme.md  stdafx.cpp  stdafx.h
MavLinkCom/MavLinkTest/: CMakeLists.txt  Commands.cpp  Commands.h  ConsoleBase.h  MavLinkTest.sln  MavLinkTest.vcxproj  MavLinkTest.vcxproj.filters  ReadMe.txt  UnitTests.cpp  UnitTests.h  main.cpp  run.sh  upcmake.sh
MavLinkCom/common_utils/: EnumFlags.hpp  ExceptionUtils.hpp  FileSystem.cpp  FileSystem.hpp  MedianFilter.hpp  StrictMode.hpp  ThreadUtils.cpp  ThreadUtils.hpp  Utils.cpp  Utils.hpp  json.hpp  optional.hpp  prettyprint.hpp  type_utils.hpp
MavLinkCom/include/: AdHocConnection.hpp  AsyncResult.hpp  MavLinkConnection.hpp  MavLinkDebugLog.hpp  MavLinkFtpClient.hpp  MavLinkLog.hpp  MavLinkMessageBase.hpp  MavLinkMessages.hpp  MavLinkNode.hpp  MavLinkSemaphore.hpp  MavLinkTcpServer.hpp  MavLinkVehicle.hpp  MavLinkVideoStream.hpp  Semaphore.hpp  UdpSocket.hpp  VehicleState.hpp
MavLinkCom/mavlink/: checksum.h  mavlink_conversions.h  mavlink_get_info.h  mavlink_helpers.h  mavlink_sha256.h  mavlink_types.h  protocol.h
MavLinkCom/mavlink_utils/: Utils.hpp
MavLinkCom/src/: AdHocConnection.cpp  MavLinkConnection.cpp  MavLinkFtpClient.cpp  MavLinkLog.cpp  MavLinkMessageBase.cpp  MavLinkMessages.cpp  MavLinkNode.cpp  MavLinkSemaphore.cpp  MavLinkTcpServer.cpp  MavLinkVehicle.cpp  MavLinkVideoStream.cpp  Semaphore.cpp  UdpSocket.cpp
cmake/: CMakeLists.txt  Makefile  build.sh  clean_getlibcxx.sh  gcc_build.sh  getlibcxx.sh  readme.md
cmake/AirLib/: CMakeLists.txt  Makefile
cmake/AirLibUnitTests/: CMakeLists.txt
cmake/DroneServer/: CMakeLists.txt  Makefile
cmake/DroneShell/: CMakeLists.txt  Makefile
cmake/HelloCar/: CMakeLists.txt
cmake/HelloDrone/: CMakeLists.txt  HelloDrone  Makefile
cmake/HelloSpawnedDrones/: CMakeLists.txt
cmake/MavLinkCom/: CMakeLists.txt  Makefile
cmake/MavLinkTest/: CMakeLists.txt
cmake/cmake-modules/: AirsimConfig.cmake.in  CommonSetup.cmake  FindEigen3.cmake
cmake/rpclib_wrapper/: CMakeLists.txt
cmake/test/: CMakeLists.txt
rpclib_wrapper/: CMakeLists.txt
(+2724 files in other folders)
